AWE/src/objects/AWE_Custom_Lookup_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This is setting for custom lookup</description>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isName__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isName</label>
        <type>Checkbox</type>
    </fields>
    <label>AWE Custom Lookup Settings</label>
</CustomObject>